<resources>
    <string name="app_name">AndroidAppTemplate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_itens">Itens</string>
    <string name="logo_preservart_description">Logo PreservArt</string>
    <string name="login_title">Login de Usuário</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="login_button">Login</string>
    <string name="register_link">Cadastre-se</string>
</resources>